# genja

./: .gitignore  Cargo.toml  README.md
docs/: settings.md
examples/: config.example.json  config.example.yaml
genja/: Cargo.toml
genja-core/: .pdm-python  Cargo.toml
genja-core-derive/src/: lib.rs
genja-core-python/: Cargo.toml  pyproject.toml
genja-core-python/python/genja_core/: __init__.py  __init__.pyi  task.py  task.pyi
genja-core-python/python/tests/: test_runtime.py  test_settings.py  test_task_definition.py  test_task_results.py
genja-core-python/python/tests/fixtures/: settings.yaml
genja-core-python/src/: lib.rs
genja-core/src/: errors.rs  inventory.rs  lib.rs  settings.rs  state.rs  task.rs  types.rs
genja-core/tests/: inventory_test.rs
genja-core/tests/common/: mod.rs
genja-plugin-manager/: Cargo.toml  README.md
genja-plugin-manager/src/: build_support.rs  connection_factory.rs  lib.rs  plugin_structs.rs  plugin_types.rs
genja-plugin-manager/tests/plugin_inventory/: Cargo.toml
genja-plugin-manager/tests/plugin_inventory/src/: inventory_a.rs  lib.rs
genja-plugin-manager/tests/plugin_mods/: Cargo-macos.toml  Cargo-windows.toml  Cargo.toml
genja-plugin-manager/tests/plugin_mods/src/: lib.rs  plugin_a.rs  plugin_b.rs
genja-plugin-manager/tests/plugin_tasks/: Cargo.toml
genja-plugin-manager/tests/plugin_tasks/src/: lib.rs  task_a.rs
genja/src/: filter.rs  lib.rs  plugins.rs  task_executor.rs
genja/src/plugins/: inventory.rs  mod.rs
genja/src/plugins/runners/: executor.rs  mod.rs  serial.rs  threaded.rs
