[project]
name = "genja-core-python"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# dynamic = ["version"]
dependencies = [
    "pip>=25.0.1",
]
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andre Bowen-Brown", email = "contact@genja.co.uk"},
]
# readme = "README.md"
license = {text = "MIT"}

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest tests/"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
