[project]
name = "genja-core-python"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# dynamic = ["version"]
dependencies = [
    "pip>=25.0.1",
    "pydantic>=2.11.0",
]
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andre Bowen-Brown", email = "contact@genja.co.uk"},
]
# readme = "README.md"
license = {text = "MIT"}

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = { shell = "maturin develop && pytest -v python/tests" }

[dependency-groups]
dev = [
    "patchelf>=0.17.2.4",
    "pytest>=9.0.3",
]

[build-system]
requires = ["maturin[patchelf]>=1,<2"]
build-backend = "maturin"
