[dependencies]
libloading = "0.8.8"
log = "0.4.28"
serde_json = "1.0.145"
toml = "0.9.6"

[dependencies.serde]
features = ["derive"]
version = "1.0.225"

[lib]
name = "plugin_manager"

[package]
authors = ["Andre Bowen-Brown <contact@genja.co.uk>"]
categories = [
    "development-tools",
    "rust-patterns",
]
description = "A flexible and easy-to-use plugin management system for Rust applications"
edition = "2024"
keywords = [
    "plugin",
    "manager",
    "dynamic",
    "loading",
]
license = "Apache-2.0"
name = "genja-plugin-manager"
readme = "README.md"
version = "0.1.0"
