[package]
name = "genja"
version = "0.1.0"
edition = "2024"

[dependencies]
genja-core = { path = "../genja-core" }
genja-plugin-manager = { path = "../genja-plugin-manager" }
log = "0.4.27"
regex = "1.12.2"
serde_json = "1.0.142"

[dev-dependencies]
genja-core-derive = { path = "../genja-core-derive" }
